maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: expected class or object definition
def distanceFin ():Unit={
^JediEscaper:114: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:115: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:116: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:117: error: Unmatched closing brace '}' ignored here
}
^